--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     <div>
         <h2>Contact Info</h2>
         <ul>
-            <li><b>Email:</b> kejone1414@gmail.com</li>
-            <li><b>Github:</b> kjones23</li>
+            <li><b>Email:</b> <a href="mailto:kejone1414@gmail.com" target="_top">
+                kejone1414@gmail.com</a></li>
+            <li><b>Github:</b> <a href="https://github.com/katjones23">
+                kjones23</a></li>
             <li><b>Portfolio:</b><i> coming soon</i></li>
         </ul>
     </div>
