--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <ul>
             <li><b>Email:</b> <a href="mailto:kejone1414@gmail.com" target="_top">
                 kejone1414@gmail.com</a></li>
-            <li><b>Github:</b> <a href="https://github.com/katjones23">
+            <li><b>Github:</b> <a href="https://github.com/katjones23" target="_blank">
                 kjones23</a></li>
-            <li><b>Portfolio:</b><i> coming soon</i></li>
+            <li><b>Portfolio:</b> <a href="#"><i>coming soon</i></a></li>
         </ul>
     </div>
     
